# jedi

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
icon/: jedi.desktop  jedi.icns
jedi/: CMakeLists.txt  Help.txt  async_messages.h  buffer.cpp  buffer.h  code_completion.cpp  code_completion.h  colors.cpp  colors.h  draw.cpp  draw.h  edit.cpp  edit.h  engine.cpp  engine.h  grid.cpp  grid.h  hex.cpp  hex.h  jedi.icns  jedi.rc  jedi_syntax.json  main.cpp  mario.cpp  mario.h  mouse.cpp  mouse.h  pdcex.cpp  pdcex.h  plumber.cpp  plumber.h  plumber.json  pref_file.cpp  pref_file.h  resource.h  serialize.cpp  serialize.h  settings.cpp  settings.h  syntax_highlight.cpp  (+7 more)
jedi.tests/: CMakeLists.txt  edit_tests.cpp  edit_tests.h  test.cpp  trie_tests.cpp  trie_tests.h
jedi/macos/: plumber.json
jedi/win/: plumber.json
jsonfmt/: CMakeLists.txt  main.cpp
lexicalsort/: CMakeLists.txt  main.cpp
lower/: CMakeLists.txt  main.cpp
pdcurses/: CMakeLists.txt  curspriv.h
pdcurses/sdl2/: pdcscrn.c
stdcerrtest/: CMakeLists.txt  main.cpp
tocstr/: CMakeLists.txt  main.cpp
tree/: CMakeLists.txt  main.cpp
upper/: CMakeLists.txt  main.cpp
